Load initial processes

--- a/scripts/grub.cfg
+++ b/scripts/grub.cfg
@@ -1,4 +1,6 @@
 clear
 search --set=root --file /boot/micro-os/kernel
 multiboot2 /boot/micro-os/kernel root=$root
+module2 /boot/micro-os/idle root=$root
+module2 /boot/micro-os/demo root=$root
 boot
